--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-          scope: '@ifrunistuttgart'
+          scope: '@surely552'
       - run: npm install
       - run: npm run build
       - run: npm publish
