--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ifrunistuttgart/node-mavlink",
+  "name": "@surely552/node-mavlink",
   "version": "0.1.2",
   "description": "A library for parsing and packing MAVLink 2 messages",
   "main": "lib/index.js",
